docs: fix openings handler bug
